--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "migrate": "sqlite3 db/election.db < db/schema.sql",
     "seed": "sqlite3 db/election.db < db/seeds.sql",
     "db": "sqlites3 db/election.db",
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "repository": {
@@ -23,6 +24,8 @@
   "homepage": "https://github.com/shellienguyen/u-develop-it#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
